# tta-ai-accelerator

./: Cargo.toml  Functional_Unit_Port_Contracts.md  PROJECT_COMPLETION_SUMMARY.md  Physics_Engine_Integration_Interface.rs  README.md  RESEARCH_ROADMAP.md  RESULTS.md  Stall_Reasons_Taxonomy.md  TECHNICAL_REPORT.md  TEST_PROGRESS_LOG.md  TTA_Project_Status_Impl_Tracking.md  bonus-if-moving-forward-phase3_phase4_playbook.md  debug_energy.rs  debug_energy_test.rs  map.md  responses_1.txt  responses_2.txt
config/: tta.toml
examples/: performance_analysis.rs
physics_engine/: Cargo.toml
physics_engine/src/: analysis.rs  config.rs  evolution.rs  evolution_binary.rs  evolution_update.rs  main.rs  main_binary.rs  main_extreme.rs  optimizers.rs  physics.rs  substrate.rs  substrate_binary.rs  sweep.rs  sweep_extended.rs
src/: lib.rs  main.rs
src/analysis/: competitive_benchmarks.rs  mod.rs  parameter_sweep.rs  pareto_analysis.rs  performance_energy_analysis.rs  performance_summary.rs  publication_metrics.rs  scaling_analysis.rs  transformer_models.rs  visualization.rs
src/config/: mod.rs
src/kernels/: attention.rs  batch_norm.rs  conv2d.rs  gemm.rs  mod.rs  optimized_attention.rs  softmax.rs  (+4 more)
synthesis/: synthesis_methodology.md  synthesis_results.md  synthesis_script.ys  tool_assessment.md  vecmac_rtl.v  vecmac_synthesized.v
tests/: a8_validation_tests.rs  advanced_kernels_test.rs  comprehensive_analysis_test.rs  energy_optimization_test.rs  extended_kernels_test.rs  integration_test.rs  performance_energy_test.rs  precision_analysis_test.rs  robustness_test.rs
(+22 files in other folders)
